# MmdetectionTest

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
dvcfiles/: yolov3_d53_fp16_mstrain-608_273e_coco_20210517_213542-4bc34944.dvc
environments/continuous_integration/: docker-compose.yaml
environments/development/: Dockerfile-core  Dockerfile-core-old  docker-compose.yaml
environments/development/.devcontainer/: devcontainer.json
models/mmdet_pretrained/: .gitignore
src/config/hydra/: predict.yaml  predict_onnx.yaml  pytorch2onnx.yaml  train.yaml
src/config/hydra/detector/: yolov3.yaml
src/config/mmdetection/: train.py
src/config/mmdetection/dataset/: coco.py  strawdi.py
src/config/mmdetection/model/: yolov3_d53.py  yolov3_mobilenetv2.py
src/config/mmdetection/optimizer/: sgd.py
src/config/mmdetection/predefined/yolo/: yolov3_d53_mstrain-608_273e_coco.py  yolov3_mobilenetv2_320_300e_coco.py  yolov3_mobilenetv2_mstrain-416_300e_coco.py
src/mmcv/: config.py
src/mmdetection/: onnx_converter.py  save.py  task.py
src/scripts/: convert_annotation.py  download_pretrained_weights.py  predict.py  predict_onnx.py  pytorch2onnx.py  train.py
